...
import androidx.compose.ui.unit.sp
import com.rafaeltmbr.tipcalculator.R
import com.rafaeltmbr.tipcalculator.common.utils.calculateTip
import com.rafaeltmbr.tipcalculator.ui.components.BooleanQuestionRow
import com.rafaeltmbr.tipcalculator.ui.components.NumericField

internal val roundTipSwitchTestTag = "roundTipSwitchTestTag"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
internal fun TipCalculatorScreen(
    modifier: Modifier = Modifier,
) {
...
